--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>ecom - store</title>
 </head>
 <body>
-    <div class="btn">
-        <button id="btnActive" class="btn-btn"><i class="fa-solid fa-bag-shopping fa-xl" style="color: #ffffff;"></i></button>
-    </div>
-    <div class="Side-bar">
+    <div class="main-container">
+        <div class="btn">
+            <button id="btnActive" class="btn-btn"><i class="fa-solid fa-bag-shopping fa-xl" style="color: #ffffff;"></i></button>
+        </div>
+    
+        <div id="root">
 
-    </div>
-    <div id="root">
-        <div id="products">
-            <div id="newDiv">
-                
+            <div class="card">
+                <button id="close" class="close-btn"><i class="fa-solid fa-xmark fa-xl" style="color: #000000;"></i></button>
+            </div>
+            <div id="products">
             </div>
         </div>
     </div>
